# getsi_challenges

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  style.css
src/challenges/: CMakeLists.txt
src/challenges/cinephiles_on_vacations/: CMakeLists.txt  README.md  algorithm.cpp  algorithm.hpp
src/challenges/hurry_with_my_dessert/: CMakeLists.txt  README.md  algorithm.cpp  algorithm.hpp
src/challenges/preferential_queues/: CMakeLists.txt  README.md  algorithm.cpp  algorithm.hpp
src/data_structures/: CMakeLists.txt
src/data_structures/circular_linked_list/: CMakeLists.txt  circular_linked_list.hpp
src/data_structures/doubly_circular_linked_list/: CMakeLists.txt  doubly_circular_linked_list.hpp
src/data_structures/linked_list/: CMakeLists.txt  linked_list.hpp  node.hpp
src/data_structures/queue/: CMakeLists.txt  queue.hpp
src/data_structures/stack/: CMakeLists.txt  stack.hpp
src/data_structures/unordered_map/: CMakeLists.txt  unordered_map.hpp
src/hurry_with_my_dessert/: CMakeLists.txt  README.md  algorithm.cpp  algorithm.hpp  data.json
src/hurry_with_my_triffle/: README.md  enunciado.md
src/preferential_queues/: enunciado.md
src/tester/: CMakeLists.txt  tester.cpp  tester.hpp
